[gd_scene load_steps=3 format=3 uid="uid://bi77sv6vft0qq"]

[ext_resource type="Script" path="res://UI/choosing_player.gd" id="1_u4r50"]
[ext_resource type="PackedScene" uid="uid://d3u4dc7f7krif" path="res://Game/waifa/background.tscn" id="2_3d56d"]

[node name="ChoosingPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4r50")

[node name="Background" parent="." instance=ExtResource("2_3d56d")]

[node name="NewGameSlot1" type="Button" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 106.0
offset_right = 564.0
offset_bottom = 289.0
theme_override_font_sizes/font_size = 50
text = "New game"

[node name="NewGameSlot2" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 403.0
offset_right = 566.0
offset_bottom = 586.0
theme_override_font_sizes/font_size = 50
text = "New game"

[node name="NewGameSlot3" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 704.0
offset_right = 566.0
offset_bottom = 887.0
theme_override_font_sizes/font_size = 50
text = "New game"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 1031.0
offset_right = 442.0
offset_bottom = 1094.0
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="DeleteSlot1" type="Button" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 301.0
offset_right = 413.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 40
text = "DELETE"

[node name="DeleteSlot2" type="Button" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 606.0
offset_right = 406.0
offset_bottom = 669.0
theme_override_font_sizes/font_size = 40
text = "DELETE"

[node name="DeleteSlot3" type="Button" parent="."]
layout_mode = 0
offset_left = 252.0
offset_top = 905.0
offset_right = 400.0
offset_bottom = 968.0
theme_override_font_sizes/font_size = 40
text = "DELETE"

[node name="Confirm" type="Node2D" parent="."]

[node name="BlockScreen" type="ColorRect" parent="Confirm"]
offset_left = -245.0
offset_top = -133.0
offset_right = 2310.0
offset_bottom = 1347.0
color = Color(1, 1, 1, 0)

[node name="ConfirmNoBack" type="Button" parent="Confirm"]
modulate = Color(1, 1, 1, 0)
offset_left = -126.0
offset_top = -50.0
offset_right = 2088.0
offset_bottom = 1297.0
theme_override_font_sizes/font_size = 40

[node name="ConfirmWindow" type="ColorRect" parent="Confirm"]
offset_left = 128.0
offset_top = 311.0
offset_right = 556.0
offset_bottom = 638.0
color = Color(0, 0.788235, 1, 0.643137)

[node name="ConfirmYes" type="Button" parent="Confirm/ConfirmWindow"]
layout_mode = 0
offset_left = 73.0
offset_top = 211.0
offset_right = 147.0
offset_bottom = 274.0
theme_override_font_sizes/font_size = 40
text = "Yes"

[node name="ConfirmNo" type="Button" parent="Confirm/ConfirmWindow"]
layout_mode = 0
offset_left = 262.0
offset_top = 205.0
offset_right = 336.0
offset_bottom = 268.0
theme_override_font_sizes/font_size = 40
text = "No"

[node name="Label" type="Label" parent="Confirm/ConfirmWindow"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 49.0
offset_top = 90.0
offset_right = 379.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 50
text = "Are you sure?"
horizontal_alignment = 1

[connection signal="pressed" from="NewGameSlot1" to="." method="_on_new_game_slot_1_pressed"]
[connection signal="pressed" from="NewGameSlot2" to="." method="_on_new_game_slot_2_pressed"]
[connection signal="pressed" from="NewGameSlot3" to="." method="_on_new_game_slot_3_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="DeleteSlot1" to="." method="_on_delete_slot_1_pressed"]
[connection signal="pressed" from="DeleteSlot2" to="." method="_on_delete_slot_2_pressed"]
[connection signal="pressed" from="DeleteSlot3" to="." method="_on_delete_slot_3_pressed"]
[connection signal="pressed" from="Confirm/ConfirmNoBack" to="." method="_on_confirm_no_pressed"]
[connection signal="pressed" from="Confirm/ConfirmWindow/ConfirmYes" to="." method="_on_confirm_yes_pressed"]
[connection signal="pressed" from="Confirm/ConfirmWindow/ConfirmNo" to="." method="_on_confirm_no_pressed"]
